--- a/index.html
+++ b/index.html
@@ -63,8 +63,10 @@
 	<![endif]-->
 
 	</head>
-	<body>
 	
+
+	<body>
+
 	<div id="fh5co-wrap">
 		<header id="fh5co-header">
 			<div class="container">
@@ -80,7 +82,7 @@
 			</div>
 		</header>
 
-		<div class="fh5co-hero" style="background-image: url(images/night_sky.jpg);" data-stellar-background-ratio="1">
+		<div class="fh5co-parallax" style="background-image: url(images/night_sky.jpg);" data-stellar-background-ratio="1.0">
 			<div class="overlay"></div>
 			<div class="container">
 				<div class="row">
