--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 			</div>
 		</header>
 
-		<div class="fh5co-parallax" style="background-image: url(images/night_sky.jpg);" data-stellar-background-ratio="1.0">
+		<div class="fh5co-parallax" style="background-image: url(images/night_sky.jpg);">
 			<div class="overlay"></div>
 			<div class="container">
 				<div class="row">
@@ -109,7 +109,7 @@
 			</div>
 		</div>
 
-		<div class="fh5co-parallax" style="background-image: url(images/graph.jpg);" data-stellar-background-ratio="1">
+		<div class="fh5co-parallax" style="background-image: url(images/graph.jpg);">
 			<div class="overlay"></div>
 			<div class="container">
 				<div class="row">
@@ -179,7 +179,7 @@
 		</div>
 
 
-		<div class="fh5co-parallax" style="background-image: url(images/hero_3.jpg);" data-stellar-background-ratio="1">
+		<div class="fh5co-parallax" style="background-image: url(images/hero_3.jpg);">
 			<div class="overlay"></div>
 			<div class="container">
 				<div class="row">
