--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Andrew Ross &mdash; Machine Learning</title>
-	<meta name="viewport" content="width=device-width; initial-scale=1; maximum-scale=1.0;" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
 	<meta name="description" content="Andrew Ross' Machine Learning Projects" />
 	<meta name="keywords" content="free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
 	<meta name="author" content="FreeHTML5.co" />
