--- a/teaching.html
+++ b/teaching.html
@@ -80,12 +80,13 @@
 			</div>
 		</header>
 
-		<div class="fh5co-hero" style="background-image: url(images/hero_2.jpg);" data-stellar-background-ratio="0.5">
-			<div class="overlay"></div>
+		<div class="fh5co-hero" style="background-image: url(images/stmikes.jpg); background-position: center;">
+			<div class="overlay_courses"></div>
 			<div class="container">
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 col-sm-12 col-sm-offset-0 col-xs-12 col-xs-offset-0 text-center fh5co-table">
 						<div class="fh5co-intro fh5co-table-cell">
+						<!-- style="background-color: rgba(0, 0, 0, 0.3);" -->
 							<h1 class="text-center">Current Courses</h1>
 							<p>I am currently a teaching assistant at the University of Toronto</br>
 							Below are some materials for courses currently underway</p>
@@ -177,8 +178,8 @@
 		</div>
 
 		<!-- PAST COURSES -->
-		<div class="fh5co-parallax" style="background-image: url(images/hero_2.jpg);" data-stellar-background-ratio="0.5">
-			<div class="overlay"></div>
+		<div class="fh5co-hero" style="background-image: url(images/stmikes.jpg); background-position: center;">
+			<div class="overlay_courses"></div>
 			<div class="container">
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 col-sm-12 col-sm-offset-0 col-xs-12 col-xs-offset-0 text-center fh5co-table">
@@ -236,21 +237,22 @@
 		</div>
 
 
-		<!-- <div class="fh5co-parallax" style="background-image: url(images/hero_3.jpg);" data-stellar-background-ratio="0.5">
-			<div class="overlay"></div>
+		<!-- PAST COURSES -->
+		<div class="fh5co-parallax" style="background-image: url(images/stmikes.jpg); background-position: center;">
+			<!-- <div class="overlay"></div> -->
 			<div class="container">
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 col-sm-12 col-sm-offset-0 col-xs-12 col-xs-offset-0 text-center fh5co-table">
 						<div class="fh5co-intro fh5co-table-cell">
-							<h1 class="text-center">Keep it simple</h1>
-							<p>Made with love by the fine folks at <a href="http://freehtml5.co">FreeHTML5.co</a></p>
+							<!-- <h1 class="text-center">Past Courses</h1>
+							<p> Other courses for which I have been a TA </p> -->
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 
-		<div class="fh5co-section">
+		<!-- <div class="fh5co-section">
 			<div class="container">
 
 				<div class="row">
@@ -270,8 +272,8 @@
 						<p><a href="#" class="btn btn-primary">Get started now!</a></p>
 					</div>
 				</div>
-			</div>
-		</div> -->
+			</div> -->
+		</div> 
 
 	</div> <!-- END fh5co-wrap -->
 
