--- a/contact.html
+++ b/contact.html
@@ -65,22 +65,22 @@
 	</head>
 	<body>
 	
-	<div id="fh5co-wrap">
-		<header id="fh5co-header">
+	<div id="fh5co-wrap" style="margin: auto;">
+		<header id="fh5co-header-contact">
 			<div class="container">
 				<nav class="fh5co-main-nav">
 					<ul>
-						<li><a href="index.html"><span>Home</span></a></li>
-						<li><a href="projects.html"><span>Projects</span></a></li>
-						<li><a href="teaching.html"><span>Teaching</span></a></li>
-						<li><a href="about.html"><span>About</span></a></li>
-						<li class="fh5co-active"><a href="contact.html"><span>Contact</span></a></li>
+						<li><a href="index.html" style="color: #3c3c3c"><span>Home</span></a></li>
+						<li><a href="projects.html" style="color: #3c3c3c"><span>Projects</span></a></li>
+						<li><a href="teaching.html" style="color: #3c3c3c"><span>Teaching</span></a></li>
+						<li><a href="about.html" style="color: #3c3c3c"><span>About</span></a></li>
+						<li class="fh5co-active-contact"><a href="contact.html" style="color: #3c3c3c"><span>Contact</span></a></li>
 					</ul>
 				</nav>
 			</div>
 		</header>
 
-		<div class="fh5co-hero" style="background-image: url(images/hero_3.jpg);" data-stellar-background-ratio="0.5">
+		<!-- <div class="fh5co-hero" style="background-image: url(images/hero_3.jpg);" data-stellar-background-ratio="0.5">
 			<div class="overlay"></div>
 			<div class="container">
 				<div class="row">
@@ -92,7 +92,7 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</div> -->
 		<div class="fh5co-section">
 			<div class="container">
 				<div class="row">
@@ -147,8 +147,7 @@
 
 	</div> <!-- END fh5co-wrap -->
 
-
-	<footer id="fh5co-footer">
+	<footer id="fh5co-footer" style="position: static">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-4">
